<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/import_ll_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp">

        <ImageView
            android:id="@+id/import_iv_platform_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/cd_platform_icon"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="center"
            app:srcCompat="@drawable/circle_drawable"/>

        <TextView
            android:id="@+id/import_tv_platform_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="Google Classroom"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:maxLines="2"
            android:ellipsize="end"/>

        <FrameLayout
            android:id="@+id/import_frame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp">

            <LinearLayout
                android:id="@+id/import_ll_signed_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="invisible">

                <ImageView
                    android:id="@+id/import_iv_account_icon"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:contentDescription="@string/cd_account_icon"
                    android:layout_marginEnd="8dp"
                    android:layout_gravity="end"
                    app:srcCompat="@drawable/circle_drawable"/>

                <ImageView
                    android:id="@+id/import_iv_sign_out"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/cd_sign_out"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_sign_out_black_24dp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/import_ll_signed_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:visibility="invisible">

                <TextView
                    android:id="@+id/import_tv_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:text="@string/sign_in_with"
                    android:layout_gravity="start"/>

<!--                <Button-->
<!--                    android:id="@+id/import_btn_sign_in"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:text="@string/sign_in"/>-->

                <Button
                    android:id="@+id/import_btn_sign_in"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/google"
                    app:icon="@drawable/ic_google_logo_16dp"
                    app:iconTint="@null"/>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/import_ll_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            android:text="@string/tap_for_more_options"/>

    </LinearLayout>

</LinearLayout>