<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/select_platform_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:contentDescription="@string/cd_platform_icon"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/select_platform_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceHeadline6"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="16dp">

        <ImageView
            android:id="@+id/select_remove_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_remove_platform"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_remove_black_24dp"/>

        <EditText
            android:id="@+id/select_num_platforms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="0"
            android:inputType="number"/>

        <ImageView
            android:id="@+id/select_add_platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/cd_add_platform"
            android:layout_gravity="center"
            app:srcCompat="@drawable/ic_add_black_24dp"/>

    </LinearLayout>

</LinearLayout>